refactor: change todo value to useState

--- a/lesson_0/src/scss/modules/_index.scss
+++ b/lesson_0/src/scss/modules/_index.scss
@@ -25,6 +25,7 @@ body > div:first-child {
   @include defaultBox;
 
   flex: 0 1 33.33%;
+  align-self: flex-start;
   background-color: rgb(184 202 218);
 
   &__data {
