--- a/lesson_1/src/components/post/index.module.scss
+++ b/lesson_1/src/components/post/index.module.scss
@@ -9,7 +9,17 @@
   &__settings {
     display: flex;
     justify-content: space-between;
+    border-bottom: 1px dotted transparentize($violet, 0.5);
+    padding: 30px 0;
     gap: 30px;
+  }
+
+  &__search {
+    flex: 0 1 30%;
+
+    input {
+      width: 100%;
+    }
   }
 
   &__item {
@@ -34,7 +44,6 @@
     align-items: center;
     align-self: center;
     justify-content: center;
-    border-bottom: 1px dotted transparentize($violet, 0.5);
     padding: 30px;
     width: calc(100% - 10px);
     gap: 20px;
