--- a/lesson_1/src/components/post/index.module.scss
+++ b/lesson_1/src/components/post/index.module.scss
@@ -81,6 +81,8 @@
 
     &_selected {
       background-color: transparentize($violet, 0.2);
+      pointer-events: none;
+      cursor: default;
     }
 
     &:hover {
