--- a/lesson_1/src/components/UI/pages/index.module.scss
+++ b/lesson_1/src/components/UI/pages/index.module.scss
@@ -1,10 +1,17 @@
 @import "~/scss/var.module";
 .pages {
+  width: 100%;
+  position: fixed;
+  left: 0;
+  top: 98px;
+  z-index: 1;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 20px;
-  margin-top: 30px;
+  padding-top: 30px;
+  padding-bottom: 10px;
+  background-color: #ffffff;
 
   &__item {
     width: 30px;
