--- a/lesson_1/src/scss/var.module.scss
+++ b/lesson_1/src/scss/var.module.scss
@@ -1,1 +1,8 @@
+$header-h: 50px;
+
+$white: rgb(255 242 254);
+
 $violet: rgb(255 0 255);
+$violet-70: rgb(255 144 255);
+$violet-85: rgb(255 188 255);
+$violet-95: rgb(255 231 255);
