--- a/lesson_1/src/scss/global/_global.scss
+++ b/lesson_1/src/scss/global/_global.scss
@@ -16,8 +16,9 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  border: 1px solid transparentize($violet, 0.7);
+  border: 1px solid $violet-70;
   border-radius: 7px;
   box-sizing: border-box;
-  background-color: transparentize($violet, 0.8);
+  background-color: $violet-95;
+  box-shadow: inset 0 0 5px 1px $violet-85;
 }
