--- a/lesson_1/src/components/UI/header/index.module.scss
+++ b/lesson_1/src/components/UI/header/index.module.scss
@@ -13,12 +13,18 @@
   gap: 30px;
 
   &__link {
-    opacity: 0.7;
+    color: $white;
+    opacity: 0.8;
     cursor: pointer;
     transition: all 0.2s ease;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 0.8rem;
 
     &_selected {
-      color: $white;
+      cursor: default;
+      opacity: 1;
+      font-weight: 700;
     }
 
     &:hover {
