--- a/lesson_1/src/components/UI/loading/index.module.scss
+++ b/lesson_1/src/components/UI/loading/index.module.scss
@@ -9,8 +9,10 @@
   height: 1em;
   border-radius: 50%;
   margin: 72px auto;
-  position: relative;
-  -webkit-transform: translateZ(0);
+  position: fixed;
+  left: calc(50% - 45px);
+  top: calc(50% - 85px);
+  -webkit-transform: translate(0);
   -ms-transform: translateZ(0);
   transform: translateZ(0);
   -webkit-animation: load6 1.7s infinite ease, round 1.7s infinite ease;
