--- a/lesson_1/src/components/UI/header/index.module.scss
+++ b/lesson_1/src/components/UI/header/index.module.scss
@@ -22,6 +22,10 @@
     text-transform: uppercase;
     font-size: 0.8rem;
 
+    &:last-child {
+      margin-left: 30px;
+    }
+
     &_selected {
       cursor: default;
       opacity: 1;
