--- a/lesson_1/src/components/posts/index.module.scss
+++ b/lesson_1/src/components/posts/index.module.scss
@@ -3,8 +3,7 @@
 .posts {
   display: flex;
   flex-direction: column;
-  padding: 10px 20px;
-  padding: 110px 0;
+  padding-top: 110px;
 
   &__settings {
     width: 100vw;
@@ -71,4 +70,8 @@
     flex-direction: column;
     gap: 30px;
   }
+}
+
+.bottomRef {
+  height: 20px;
 }
